--- a/client/package.json
+++ b/client/package.json
@@ -5,22 +5,29 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.10.1",
+    "@babel/traverse": "^7.23.2",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.10.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-loader": "^9.1.3",
     "components": "^0.1.0",
+    "file-loader": "^6.2.0",
     "gh-pages": "^4.0.0",
     "radio-browser-api": "^6.0.1",
     "react": "^18.1.0",
     "react-audio-player": "^0.17.0",
+    "react-dev-utils": "^12.0.1",
     "react-dom": "^18.1.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "4.4.0",
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "resolve-url-loader": "^5.0.0",
     "styled": "^1.0.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
